oops: fix badge spacing in nav
follow up

--- a/css/main.css
+++ b/css/main.css
@@ -478,7 +478,10 @@ code span.co { color: var(--pico-muted-color)} /* comment */
     margin-top: 0.1em; /* custom alignment */
     padding: 0.08rem 0.23rem !important;
     line-height: 1.25;
-    /* margin-right: 0.5em; */
+}
+
+nav span.badge {
+    margin-right: 0.45em;
 }
 
 nav li li li {
